<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopills"
    tools:context=".EliminarMedicamentos">

    <TextView
        android:id="@+id/textViewFormulaPpal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/navbar_edittext"
        android:fontFamily="@font/zenmarugothic_medium"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewCerrarCreMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/textViewFormulaPpal"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/imageViewBackPpal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toTopOf="@+id/textViewFormulaPpal"
        app:srcCompat="@drawable/atras_26"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewTituloFormula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/zenmarugothic_medium"
        android:text="@string/crearMedicamento"
        android:textColor="@color/azul_base"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/azul_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />


    <Spinner
        android:id="@+id/spinner2"
        style="@style/SpinnerStyle"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#ADD6FB"
        android:defaultValue="Seleccione un Item"
        android:entries="@array/cada_spinner"
        android:fontFamily="@font/zenmarugothic_regular"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/zenmarugothic_regular"
        android:text="@string/tomarCada"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="@+id/spinner2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/zenmarugothic_regular"
        android:text="Nombre Medicina :"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/zenmarugothic_regular"
        android:text="@string/prompt_observacion"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        app:layout_constraintBottom_toTopOf="@+id/editTextText9"
        app:layout_constraintStart_toStartOf="@+id/editTextText9" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/zenmarugothic_regular"
        android:text="@string/prompt_fechaInicio"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        app:layout_constraintBottom_toTopOf="@+id/editTextText10"
        app:layout_constraintStart_toStartOf="@+id/editTextText10" />

    <EditText
        android:id="@+id/editTextText11"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:fontFamily="@font/zenmarugothic_regular"
        android:inputType="text"
        android:paddingStart="10dp"
        android:text="@string/texto_horaInicio"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText10" />

    <Spinner
        android:id="@+id/spinner1"
        style="@style/SpinnerStyle"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="#ADD6FB"
        android:defaultValue="Seleccione un Item"
        android:dropDownWidth="match_parent"
        android:entries="@array/formulas_spinner"
        android:fontFamily="@font/zenmarugothic_regular"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewFormulaPpal" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:fontFamily="@font/zenmarugothic_regular"
        android:inputType="text"
        android:paddingStart="10dp"
        android:text="@string/observacionMedicina"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:fontFamily="@font/zenmarugothic_regular"
        android:inputType="text"
        android:paddingStart="10dp"
        android:text="@string/texto_fechaInicio"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:fontFamily="@font/zenmarugothic_regular"
        android:inputType="text"
        android:paddingStart="10dp"
        android:text="@string/medicamento3"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/zenmarugothic_regular"
        android:text="@string/prompt_horaInicio"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        app:layout_constraintBottom_toTopOf="@+id/editTextText11"
        app:layout_constraintStart_toStartOf="@+id/editTextText11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/zenmarugothic_regular"
        android:text="@string/prompt_formula"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintStart_toStartOf="@+id/spinner1" />

    <Button
        android:id="@+id/btnCrearMedicamMMM"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background"
        android:enabled="true"
        android:fontFamily="@font/zenmarugothic_bold"
        android:text="@string/crearMedicina"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText11" />

</androidx.constraintlayout.widget.ConstraintLayout>