<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopills"
    tools:context=".EliminarFormula">

    <TextView
        android:id="@+id/textViewFormulaPpal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/navbar_edittext"
        android:fontFamily="@font/zenmarugothic_medium"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewCerrarDetFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/textViewFormulaPpal"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/imageViewBackDetFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toTopOf="@+id/textViewFormulaPpal"
        app:srcCompat="@drawable/atras_26"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/detalleFormula"
        android:textColor="@color/azul_base"
        android:textSize="38sp"
        android:fontFamily="@font/zenmarugothic_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/azul_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="294dp"
        android:layout_height="169dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:text="@string/observacion"
        android:textColor="@color/black"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/prompt_formula"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/prompt_observacion"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="10dp"
        android:text="@string/tratamiento2"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineView1" />

    <Button
        android:id="@+id/btnEliminarFormula"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/button_background"
        android:enabled="true"
        android:text="@string/eliminar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/zenmarugothic_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnEditarFormula"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginBottom="140dp"
        android:background="@drawable/button_background"
        android:enabled="true"
        android:text="@string/editar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/zenmarugothic_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toEndOf="@+id/btnEliminarFormula" />

</androidx.constraintlayout.widget.ConstraintLayout>