<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopills"
    tools:context=".Login">

    <TextView
        android:id="@+id/textViewFormula1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/navbar_edittext"
        android:fontFamily="@font/zenmarugothic_medium"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="264dp"
        android:layout_height="54dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="textPassword"
        android:text="1234567890"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:paddingStart="18dp"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="264dp"
        android:layout_height="54dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:inputType="text"
        android:text="rodcel123"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:paddingStart="18dp"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/prompt_usuario"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/prompt_contrasena"
        android:textAlignment="textStart"
        android:textColor="@color/azul_base"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/azul_base"
        android:textSize="40sp"
        android:fontFamily="@font/zenmarugothic_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:background="@drawable/button_background"
        android:enabled="true"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/zenmarugothic_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/azul_base"
        android:textSize="20sp"
        android:fontFamily="@font/zenmarugothic_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>